updates to vehicleSelector feature file

--- a/PHP/edmunds_test/behat.yml
+++ b/PHP/edmunds_test/behat.yml
@@ -8,8 +8,8 @@ default:
       browser_name: chrome
 
 
-  suites:
-    default:
-      contexts:
-        - Behat\MinkExtension\Context\MinkContext
-        - FeatureContext
+#  suites:
+#    default:
+#      contexts:
+#        - Behat\MinkExtension\Context\MinkContext
+#        - FeatureContext
